[tool.poetry]
name = "dagster_getting_start"
version = "0.1.0"
description = ""
authors = ["Yothin Muangsommuk <m@yothinix.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^0.14.5"
dagit = "^0.14.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
